# learning-sdl2

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  LICENSE  Makefile  README.md  compile_commands.json  compile_flags.txt  out
include/: Component.hpp  Entity.hpp  Game.hpp  GameObject.hpp  Manager.hpp  Map.hpp  Math.hpp  Platform.hpp  Player.hpp  RenderWindow.hpp  TextureManager.hpp  Tile.hpp  Utils.hpp  Vector2D.hpp
include/ECS/: Component.hpp  Entity.hpp  PositionComponent.hpp  RenderComponent.hpp
res/dev/: clear_sky1.ase
src/: Entity.cpp  Game.cpp  GameObject.cpp  Map.cpp  Platform.cpp  Player.cpp  RenderWindow.cpp  TextureManager.cpp  Tile.cpp  main.cpp
